Potential fix for menu button on iPhone 6.

--- a/Web/App/app.css
+++ b/Web/App/app.css
@@ -331,8 +331,8 @@ textarea,
   .mobile-menu-button {
     display: inline-block;
     vertical-align: middle;
-    width: 1.1em;
-    height: 1.1em;
+    width: 18px;
+    height: 18px;
     margin-right: 5px;
     background: linear-gradient(to bottom, white, white 20%, transparent 20%, transparent 40%, white 40%, white 60%, transparent 60%, transparent 80%, white 80%, white 100%);
     appearance: none;
