--- a/Web/App/styles/mobile.less
+++ b/Web/App/styles/mobile.less
@@ -28,8 +28,8 @@
   .mobile-menu-button {
     display: inline-block;
     vertical-align: middle;
-    width: 1.1em;
-    height: 1.1em;
+    width: 18px;
+    height: 18px;
     margin-right: 5px;
     background: linear-gradient(
       to bottom, 
